[package]
name = "rtunnel"
version = "0.9.2"
edition = "2024"
default-run = "rtunnel"

[features]
debug = []

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8.23"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.11.0"
tokio-util = { version = "0.7.17", features = ["rt"] }
socket2 = "0.6.1"
clap = { version = "4.5.52", features = ["derive"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["aws_lc_rs"] }
rcgen = "0.14.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.23.0"

[[bin]]
name = "echo-bench"
path = "benchmark/echo-bench.rs"

[[bin]]
name = "echo-server"
path = "benchmark/echo-server.rs"

[[bin]]
name = "echo-client"
path = "benchmark/echo-client.rs"
