[package]
name = "rtunnel"
version = "0.12.7"
edition = "2024"
default-run = "rtunnel"

[features]
debug = []

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.11.0"
tokio-util = { version = "0.7.17", features = ["rt"] }
socket2 = "0.6.1"
clap = { version = "4.5.52", features = ["derive"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["aws-lc-rs"] }
rcgen = { version = "0.14.5", default-features = false, features = ["aws_lc_rs","crypto","pem"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter","fmt","std","local-time"]}
quinn = { version = "0.11.9", default-features = false, features = ["rustls-aws-lc-rs", "runtime-tokio"]}
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.18", features = ["http1", "server", "tokio"] }

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.23.0"

[[bin]]
name = "echo-bench"
path = "benchmark/echo-bench.rs"

[[bin]]
name = "echo-server"
path = "benchmark/echo-server.rs"

[[bin]]
name = "echo-client"
path = "benchmark/echo-client.rs"
